@@ -1,3 +1,0 @@
-Image set for xteddy, consisting of a big and a smaller BSD daemon.
-Derived from work of Marshall Kirk McKusick, see the docs for more
-information.
