@@ -1,22 +1,0 @@
-@comment $NetBSD: PLIST,v 1.5 2012/06/16 03:15:32 dholland Exp $
-bin/xdaemon
-bin/xdaemon2
-bin/xnetbsd-flag
-bin/xnetbsd-flag2
-share/doc/xdaemon.README
-share/xteddy/pixmaps/xdaemon2_bw.xbm
-share/xteddy/pixmaps/xdaemon2_color.xpm
-share/xteddy/pixmaps/xdaemon2_icon.xbm
-share/xteddy/pixmaps/xdaemon2_mask.xbm
-share/xteddy/pixmaps/xdaemon_bw.xbm
-share/xteddy/pixmaps/xdaemon_color.xpm
-share/xteddy/pixmaps/xdaemon_icon.xbm
-share/xteddy/pixmaps/xdaemon_mask.xbm
-share/xteddy/pixmaps/xnetbsd-flag2_bw.xbm
-share/xteddy/pixmaps/xnetbsd-flag2_color.xpm
-share/xteddy/pixmaps/xnetbsd-flag2_icon.xbm
-share/xteddy/pixmaps/xnetbsd-flag2_mask.xbm
-share/xteddy/pixmaps/xnetbsd-flag_bw.xbm
-share/xteddy/pixmaps/xnetbsd-flag_color.xpm
-share/xteddy/pixmaps/xnetbsd-flag_icon.xbm
-share/xteddy/pixmaps/xnetbsd-flag_mask.xbm
