@@ -1,53 +1,0 @@
-$NetBSD: distinfo,v 1.7 2021/10/26 11:34:37 nia Exp $
-
-BLAKE2s (xdaemon/Daemon.README) = c333f7f722cabc6afe2918ff7d24ac9e46dce3b7ec0d83f0ca9782cca005b336
-SHA512 (xdaemon/Daemon.README) = 8aaf704a95c7cd25c85c4e0d789ed050b555f3ec0a3c11754b79d8b118b68c32d0eac1fbc3022124b10a7c588e78b592e77ad2f718ab4120a95b8859ca94fa5b
-Size (xdaemon/Daemon.README) = 2191 bytes
-BLAKE2s (xdaemon/xdaemon_bw.xbm) = d5ba371e40098abc98db098f2f7f2c86c9cb73bea05b1f5a1359fe4ccb15b88d
-SHA512 (xdaemon/xdaemon_bw.xbm) = 45dc2bfd902dd74c76cebc9a7765b4136d569ee54b2024a19a6a69a6ee088dee818589bbda819788e3ee37b23bb4992edab624c6a4f981cde1de15587095d73c
-Size (xdaemon/xdaemon_bw.xbm) = 37312 bytes
-BLAKE2s (xdaemon/xdaemon2_bw.xbm) = 4e3a96f10a4ca1e7fae43102f8d7e22efe3799ffb6d69225c5d0b8a140e41d9a
-SHA512 (xdaemon/xdaemon2_bw.xbm) = 300253969d1ed246b20db188b9abce6f8923d8904fee95e22bf85a8789bd5f3044db721ff069ce0dae638d0e68c455ecabb272ce248f9b5b1adba30aa49031a4
-Size (xdaemon/xdaemon2_bw.xbm) = 9721 bytes
-BLAKE2s (xdaemon/xnetbsd-flag_bw.xbm) = 70ef266220f0a9d33c34f9da01a255751b58e1d90f62a6e218151678637e3904
-SHA512 (xdaemon/xnetbsd-flag_bw.xbm) = 4f6cc9fd81f320711e3cc02e5192605048674f3a6f7c67824c220b9c9be9f2d55e24d3f7f9067020b96ce57199c2174d2687b712eabba738069b0479a46f7fa2
-Size (xdaemon/xnetbsd-flag_bw.xbm) = 54746 bytes
-BLAKE2s (xdaemon/xnetbsd-flag2_bw.xbm) = 6de2c307918654d60a7460de885f865806f8994466599826d626200b7fbf0e9f
-SHA512 (xdaemon/xnetbsd-flag2_bw.xbm) = d7ac44d99390d2407a9378d4041dc9fb4e70211e4034fe7fffc02b88ae1bd726703742bee8bae36e7a6052316f4629adca50c9cd81548753ae308482dc201109
-Size (xdaemon/xnetbsd-flag2_bw.xbm) = 6379 bytes
-BLAKE2s (xdaemon/xdaemon_color.xpm) = 39b32821fc2d19d43b328a0f23bef81b028fe47619061432fb44a9d8de8c28a0
-SHA512 (xdaemon/xdaemon_color.xpm) = 7e7faed042066e0db5cf1ae68ea0982bc9997b1183e08828ab08677fdd72dd2837caffee1308ce873f907c93004a0d0dac86b9024967187c0ee7d0627fc457ff
-Size (xdaemon/xdaemon_color.xpm) = 58385 bytes
-BLAKE2s (xdaemon/xdaemon2_color.xpm) = ac444476d1dd5ca80dd0b244b76451092f010e3c29c0db2ce2db25de84d47037
-SHA512 (xdaemon/xdaemon2_color.xpm) = 4e01d24004f96d35b8ff51a82068a808b7c68b77b8d7e6e4f7a241654b12d80ef385f366d886a04f05c309629fe0dd38e18915db2a2126d4a821d2c16d3e1ffd
-Size (xdaemon/xdaemon2_color.xpm) = 33001 bytes
-BLAKE2s (xdaemon/xnetbsd-flag_color.xpm) = 30ebda4fa2345cf7d65c05acdc58c930ea59e4b83c0b6abede9a314fbede3df3
-SHA512 (xdaemon/xnetbsd-flag_color.xpm) = 81a89489fcb0a6c66b071dfaec3497ebedf663213281d62967c2dc3102c5bc6aea1a314383fe058ff28a6abf1f427323ab3afbdffbdba0f7e28a267954c4efea
-Size (xdaemon/xnetbsd-flag_color.xpm) = 70031 bytes
-BLAKE2s (xdaemon/xnetbsd-flag2_color.xpm) = 47206e1644491a0ccd973a998a396e91fb8a13f903c4f5c3f14de221ee39a135
-SHA512 (xdaemon/xnetbsd-flag2_color.xpm) = 2d68f0320cda1371a2a49ae221cb2607d9246ebbd1027ecf6794f0c9557f7811b2c3547350a03a764043d51907b348fab9705c135cda37dd94c03d08badd6776
-Size (xdaemon/xnetbsd-flag2_color.xpm) = 8119 bytes
-BLAKE2s (xdaemon/xdaemon_icon.xbm) = 194b167d785dc7fb27b412725a2780a30cd83d3c5d18bdf4c03a13080166baba
-SHA512 (xdaemon/xdaemon_icon.xbm) = f0785b1778f5bd19516e44f6699beede22f35bc26cad5d6e475f841376cd6d94e2d2ffaa356b7ed64f87582afc2232d52282402ae00a021fed18d941ecf96360
-Size (xdaemon/xdaemon_icon.xbm) = 2070 bytes
-BLAKE2s (xdaemon/xdaemon2_icon.xbm) = 33a1c2b731ac3188c7ce1acc38c62bee5748aa5037102821255916a968f2cebd
-SHA512 (xdaemon/xdaemon2_icon.xbm) = 67b128bf786139f90a93df3a5a6627f6af0a1925799187bc8d1ef3cb29c02bbf0c31bd7484d3d7fa8eba1f6c0b16d8cfe6717384eeec881e29c9b08a92424ae7
-Size (xdaemon/xdaemon2_icon.xbm) = 2070 bytes
-BLAKE2s (xdaemon/xnetbsd-flag_icon.xbm) = e9a7343688d335d84a9a9b5418579bed0830a6c45809f3c7984bd568edf002ec
-SHA512 (xdaemon/xnetbsd-flag_icon.xbm) = ac0a8ed4443d07fb84b539d8553ada8660c4cb0ccc468307daf09d54bda6e0b9f51768e38a40f81cccd83d4e7a532170b140305af61e6bc18580be64a443cfd6
-Size (xdaemon/xnetbsd-flag_icon.xbm) = 2088 bytes
-BLAKE2s (xdaemon/xnetbsd-flag2_icon.xbm) = e9a7343688d335d84a9a9b5418579bed0830a6c45809f3c7984bd568edf002ec
-SHA512 (xdaemon/xnetbsd-flag2_icon.xbm) = ac0a8ed4443d07fb84b539d8553ada8660c4cb0ccc468307daf09d54bda6e0b9f51768e38a40f81cccd83d4e7a532170b140305af61e6bc18580be64a443cfd6
-Size (xdaemon/xnetbsd-flag2_icon.xbm) = 2088 bytes
-BLAKE2s (xdaemon/xdaemon_mask.xbm) = a0b1b237164559b58103094feeb1ca5c013284f9ebc37c04ce46b4c528a237ce
-SHA512 (xdaemon/xdaemon_mask.xbm) = 1fcfb57ea8b9c206442c02376a0f2f05edfa66cf6cc1c8ce0e89985df377f00097e97fa90f2db09fa34fd82e8366dfabbfe94dd5127a51c8f210eda1fb7727d8
-Size (xdaemon/xdaemon_mask.xbm) = 37318 bytes
-BLAKE2s (xdaemon/xdaemon2_mask.xbm) = 333ffa2a9ead8f330f122363e588c9c2e57b3b99307b4729066ade4245ca58a8
-SHA512 (xdaemon/xdaemon2_mask.xbm) = cf049176c50ff6e0543fe5ac3f6dc8938d64f1afc6fe9519e0052a1d4193e24803c91e0ec694b59f94ba8e450dd145af20cff606ec6e96b8a2e3242cd3655d41
-Size (xdaemon/xdaemon2_mask.xbm) = 9727 bytes
-BLAKE2s (xdaemon/xnetbsd-flag_mask.xbm) = 707f13c2392467d710056fed4298eb2bf3c38d3d8a2f5d2f049030b0953f28ec
-SHA512 (xdaemon/xnetbsd-flag_mask.xbm) = 492157e5bbec9dcb11b91a4beb808511703a4af068553062a007d065fd06ec2bf1e69869f301643e6dc613634e25c4d708e86d997873201c0c13f5fc7843b3d4
-Size (xdaemon/xnetbsd-flag_mask.xbm) = 54767 bytes
-BLAKE2s (xdaemon/xnetbsd-flag2_mask.xbm) = 90233f1ef8ffd95fe21ae06c6095ab2a393c1868af94468bcdcd8ee9968fcf8c
-SHA512 (xdaemon/xnetbsd-flag2_mask.xbm) = 33e9031a44b7441b5090ef25c0698081ef2c5bed4e9bcf13e32db5646b0a6ee5896f46959803089296dc63f2613c1995725d9818422153239d96b7c32a9865ad
-Size (xdaemon/xnetbsd-flag2_mask.xbm) = 6400 bytes
