@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2025,v 1.637 2025/01/27 10:49:48 adam Exp $
+$NetBSD: CHANGES-2025,v 1.638 2025/01/27 11:13:38 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2025:
 
@@ -856,3 +856,4 @@ Changes to the packages collection and infrastructure in 2025:
 	Updated devel/py-dash to 8.0.5 [adam 2025-01-27]
 	Updated devel/py-jupyter_events to 0.11.0 [adam 2025-01-27]
 	Updated www/py-jupyter_server to 2.15.0 [adam 2025-01-27]
+	Removed x11/xdaemon successor x11/xdaemon2 [wiz 2025-01-27]
